@@ -50,6 +50,9 @@ Optimizations:
   - optimize calculations by adding flag to mapped range ?
     LIBFDATA_MAPPED_RANGE_FLAG_IS_INVALID
 
+20140130
+* small fix in stream header file
+
 20140126
 * list fixed multi file caching issue
 
